# guardian-web

./: .env  .gitignore  API_DOCUMENT.md  Cargo.toml  FEATURES.md  README.md  central.toml  components.json  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  whitelist.json
agent/: Cargo.toml
agent/src/: main.rs
agent/src/app/: config.rs  mod.rs  runner.rs
agent/src/handles/: info.rs  metrics.rs  mod.rs  monitor.rs  spec.rs
agent/src/handles/get_spec/: cpu.rs  device.rs  get_spec.rs  gpu.rs  memory.rs  mod.rs  storage.rs
central/: Cargo.toml
central/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  spec.rs
migrations/: 20251209060815_server.sql
src/app/: runner.rs
src/handles/: mod.rs  specifications.rs  stream_monitor.rs
src/models/: specifications.rs
static/: index.html
static/assets/: index-2h5K89h9.js  index-43ns-JuA.css  index-BAgu9LtJ.css  index-BJUvoRfO.js  index-BRLvtMWA.css  index-BUSkf4KJ.js  index-BZst58Dl.css  index-Be0b3K0y.js  index-BmgPH97o.js  index-BnD_dgBD.css  index-BnUzHj-c.js  index-BxNdsrF9.js  index-C4jTg7Xp.css  index-C8Xo3IOH.js  index-CKvK2poX.js  index-CjTTsSOR.css  index-CmMf1v3N.css  index-D2T35pQd.js  index-D6Q5I8-h.css  index-DITT8BM7.js  index-DZvCt7Vd.css  index-Db88vQQ6.css  index-Dh8uKvAS.js  index-DlG9aw-a.js  index-DrkMiUMR.js  index-FHFaM-gw.css  index-G9Ucwu4o.js  index-W5xoksXR.css  index-adTo5QW1.css  index-jP-JatVn.css  index-s9X8sEtw.js
ts-src/: App.css  App.tsx  index.css
ts-src/components/: app-sidebar.tsx  dashboard.tsx  device_info.tsx  monitor.tsx  server-list.tsx
ts-src/hooks/: use-sse.ts
ts-src/lib/: routes.tsx
(+29 files in other folders)
