[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
anyhow = "1.0.100"
axum = "0.8.7"
config = "0.15.19"
dotenvy = "0.15.7"
futures = "0.3.31"
hyper = { version = "1.8.1", features = ["full"] }
indicatif = "0.18.3"
owo-colors = "4.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.7", features = ["fs", "timeout", "trace"] }
wgpu = "28.0.0"